# GBA-compress

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
data/: BigBuckBunny_361_240x160_bgr555.raw  BigBuckBunny_40_240x160.raw  BigBuckBunny_40_240x160_bgr555.raw  TearsOfSteel_1200_240x160_bgr555.raw  artificial_240x160.raw  artificial_240x160_bgr555.raw  flower_foveon_240x160_bgr555.raw  gradient_240x160_bgr555.raw  lorem_ipsum_2k.txt  mask6.raw  nightshot_iso_100_240x160_bgr555.raw  squish_240x160.raw  squish_240x160_bgr555.raw
gba/: CMakeLists.txt  gbacomp.cpp  tiles.h
gba/cmake/: CompilerFlagsGBA.cmake
gba/compression/: lz77.cpp  lz77.h  lz77.s
gba/data/: images.h  images.s
src/: CMakeLists.txt  gbacomp.cpp  options.cpp  options.h
src/compression/: lz4.cpp  lz4.h  lzss.h
src/io/: textio.cpp  textio.h
test/: CMakeLists.txt  test_lz4.cpp  test_lzss.cpp
